# P4estGPU

./: .gitignore  CMakeLists.txt  Readme.md  main.cu
include/: cuda_iterate.h  cuda_iterate_loop_args.h  cuda_utils.cuh  main.h  main_cuda_callbacks.h  memory_utils.h  overlap_quads_generate.h  p4est_to_cuda.h  simple_cuda_iterate.h
src/: a.out  cuda_iterate.cpp  main.cu  main_cuda_callbacks.cu  overlap_quads_generate.cpp  p4est_to_cuda.cpp  simple_cuda_iterate.cpp  simple_cuda_iterate.cu
